--- a/my-portfolio.html
+++ b/my-portfolio.html
@@ -30,13 +30,13 @@
         </div>
 
         <div class="intro-image">
-          <img src="Images/Genius.png" alt="">
+          <img src="images/Genius.png" alt="">
         </div>
     </section>
 
     <section class="sec2">
         <div class="skill-image">
-            <img  src="Images/Genius.png" alt="">
+            <img  src="images/Genius.png" alt="">
         </div>
         <div class="skill-info">
           <h2>My Dream</h2>
