--- a/my-portfolio.html
+++ b/my-portfolio.html
@@ -101,9 +101,9 @@
         <h2>Stay connected</h2>
         <h1>Genius@design.com</h1>
         <div class="icon">
-            <img src="images/image 6.png" alt="">
-            <img src="images/image 5.png" alt="">
-            <img src="images/image 7.png" alt="">
+            <a href=""><img src="images/image 6.png" alt=""></a>
+            <a href=""><img src="images/image 5.png" alt=""></a>
+            <a href=""><img src="images/image 7.png" alt=""></a>
         </div>
         <p>&copy;Genius 2021, All Right Reserved </p>
     </footer>
