--- a/my-portfolio.html
+++ b/my-portfolio.html
@@ -36,12 +36,12 @@
 
     <section class="sec2">
         <div class="skill-image">
-            <img  src="images/Genius.png" alt="">
+            <img  src="images/Genius2.png" alt="">
         </div>
         <div class="skill-info">
           <h2>My Dream</h2>
-          <h3>Become a web developer</h3>
-          <p>I already learn HTML and CSS. I can make simple gorib &#128516 website using those.</br> In future I will learn JS and its framework. </p>
+          <h3>Become a good web developer</h3>
+          <p>I already learn HTML and CSS . I can make simple gorib &#128516 website using those.</br> In future I will learn JS and its framework. Then I wil able to make quality websites. </p>
           <a class="btn" target="blank" href="#">Download Resume</a>
         </div>
     </section>
