--- a/my-portfolio.html
+++ b/my-portfolio.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&family=Open+Sans&family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&family=Open+Sans&family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="my-portfolio.css">
     <title>Portfolio</title>
 </head>
@@ -42,7 +43,7 @@
           <h2>My Dream</h2>
           <h3>Become a good web developer</h3>
           <p>I already learn HTML and CSS . I can make simple gorib &#128516 website using those.</br> In future I will learn JS and its framework. Then I wil able to make quality websites. </p>
-          <a class="btn" target="blank" href="#">Download Resume</a>
+          <a class="btn" target="blank" href="#"> <i id="download" class='fas fa-download'></i> Download Resume</a>
         </div>
     </section>
     <section class="my-project " id="services-sec">
